# Food-recognition-and-leftover-estimation

./: CMakeLists.txt  README.md
src/: detectDishes.cpp  detectDishes.h  main  main.cpp  utils.cpp  utils.h
src/Detector/: FoodTemplate.cpp  FoodTemplate.h  ObjectRecognizer.cpp  ObjectRecognizer.h
src/Performance/: FoodLeftoverEstimation.cpp  FoodLeftoverEstimation.h  mAP.cpp  mAP.h  mIOU.cpp  mIOU.h
